# maaf

./: .gitignore  Code-of-Conduct.md  Contributing.md  README.md  main.py  old_train.py  setup.cfg  setup.py  test_retrieval.py
configs/: adam_crm_imat.yaml  adam_imat.yaml  clip_fg.yaml  clip_fiq.yaml  clip_imat.yaml  clipresmaaf_fg.yaml  clipresmaaf_fiq.yaml  clipresmaaf_imat.yaml  fiq_maaf_roberta.yaml  random.yaml
datasets/: base_dataset.py  birdstowords.py  css3d.py  datasets.py  fashion200k.py  fashioniq.py  mitstates.py  spotthediff.py
experiment_scripts/: eval.sh  eval_all.sh
experiment_scripts/extra_datasets/birdstowords/: birdstowords.sh  birdstowords.yaml  birdstowords_all.sh  birdstowords_baseline.sh  birdstowords_maaf.sh  birdstowords_maaf.yaml  birdstowords_raf.sh  birdstowords_raf.yaml  birdstowords_tirg.sh  birdstowords_tirg.yaml
experiment_scripts/extra_datasets/mitstates/: mitstates.sh  mitstates.yaml  mitstates_all.sh  mitstates_baseline.sh  mitstates_maaf.sh  mitstates_maaf.yaml  mitstates_raf.sh  mitstates_raf.yaml  mitstates_tirg.sh  mitstates_tirg.yaml
experiment_scripts/extras/: clipmaaf.sh  clipmaaf.yaml  cliptirg.sh  cliptirg.yaml
experiment_scripts/old_scripts/: f200k.sh  fashioniq.sh  fashioniq_bert.sh
experiment_scripts/paper/: execute.sh  execution.txt  imfq_pretrain.sh  imfq_pretrain.yaml  imfq_pretrain_af.sh  imfq_pretrain_af.yaml  no_imfq_pretrain.sh  no_imfq_pretrain_af.sh  no_imfq_pretrain_afbig.sh
experiment_scripts/paper/base_configs/: adam_crm_imat.yaml  adam_imat.yaml  clip_fg.yaml  clip_fiq.yaml  clip_imat.yaml  clipresmaaf_fg.yaml  clipresmaaf_fiq.yaml  clipresmaaf_imat.yaml  maaf_rn50_roberta_imat.yaml  maaf_rn50_roberta_imat_finetune.yaml  random.yaml
experiment_scripts/paper/mismatch_scripts/: baseline.sh  crm_baseline.sh  crm_fg_sequence.sh  crm_imat_sequence.sh  fg_sequence.sh  imat_sequence.sh
experiment_scripts/paper/scramble_scripts/: baseline.sh  crm_baseline.sh  crm_fg_sequence.sh  crm_imat_sequence.sh  fg_sequence.sh  imat_sequence.sh
experiment_scripts/paper/scripts/: baseline.sh  crm_baseline.sh  crm_fg_sequence.sh  crm_imat_sequence.sh  fg_sequence.sh  imat_adam_sequence_track.sh  imat_sequence.sh  imat_sequence_track.sh  random.sh
models/: TransformerExtensions.py  TransformerModel.py  image_model.py  img_text_composition_models.py  text_model.py
old_scripts/: f200k.sh
scripts/: birds.sh  css.sh  f200k.sh  fashioniq.sh  fashioniq_bert.sh  mitstates.sh  spot.sh
src/maaf/: __init__.py  main.py  train.py
src/maaf/actions/: eval_cfq.py  eval_retrieval.py  eval_shopassist.py
src/maaf/config/: __init__.py  arguments.py  compat.py  config.py  defaults.py
src/maaf/datasets/: birdstowords.py  cfq.py  datasets.py  fashion200k.py  fashiongen.py  fashioniq.py  imat_fashion.py  mitstates.py
src/maaf/models/: build.py  clip.py  composition_models.py  heads.py  image_model.py  loss.py  text_model.py  transformer.py
src/maaf/utils/: bn_utils.py  io_utils.py  misc_utils.py
